add rail routing tool

--- a/index.html
+++ b/index.html
@@ -28,10 +28,24 @@
             <div class="content">
                 <div class="primary-stats column">
                     <div class="blob">
+                        <h2 class="blob-header">Railways</h2>
+                        <p class="blob-description">Diagram, route planner and optimization tool for the railway network I've constructed in my world.</p>
+                        <ul>
+                            <li><b>Last Updated: </b>2025-01-24</li>
+                            <li><b>Format: </b>Webpage (HTML)</li>
+                        </ul>
+                        <a href="./rail-routing.html">
+                            <button class="button">
+                                <span>Go</span>
+                            </button>
+                        </a>
+                    </div>
+
+                    <div class="blob">
                         <h2 class="blob-header">All The Farms!</h2>
                         <p class="blob-description">A chart of all the farms in my Minecraft world, and the infrastructure linking them together.</p>
                         <ul>
-                            <li><b>Last Updated: </b>2024-12-30</li>
+                            <li><b>Last Updated: </b>2025-01-05</li>
                             <li><b>Format: </b>Webpage (HTML)</li>
                         </ul>
                         <a href="./farms.html">
@@ -106,20 +120,6 @@
                             <li><b>Format: </b>Image (PNG)</li>
                         </ul>
                         <a href="./diagrams/quick post 2023-04-17.png">
-                            <button class="button">
-                                <span>View</span>
-                            </button>
-                        </a>
-                    </div>
-
-                    <div class="blob">
-                        <h2 class="blob-header">Railways</h2>
-                        <p class="blob-description">Rough diagram showing the built and unbuilt sections of automated railways in my Minecraft world.</p>
-                        <ul>
-                            <li><b>Last Updated: </b>2024-06-06</li>
-                            <li><b>Format: </b>Image (PNG)</li>
-                        </ul>
-                        <a href="./diagrams/rail_map.png">
                             <button class="button">
                                 <span>View</span>
                             </button>
