--- a/factory.html
+++ b/factory.html
@@ -20,7 +20,7 @@
           <div class="container" id="network" style="width: 100%; height: 98%; border:none"></div>
         </div>
         <div class="column" style="flex-basis: 25%;">
-          <div class="container" id="recipe-container"></div>
+          <div class="container" id="card-container"></div>
         </div>
       </div>
       <div class="footer subtle">
