--- a/rail-routing.html
+++ b/rail-routing.html
@@ -12,7 +12,7 @@
                 An automatic routing guide for the railway network in <b>"First World"</b>, my singleplayer Minecraft world.
             </p>
         </div>
-        <div class="content" style="width: 100%; height: 90vh; display: flex;">
+        <div class="content row" style="width: 100%; height: 90vh; display: flex;">
             <div class="column" style="flex-basis: 75%;">
                 <div id="vis-container" style="width: 100%; height: 85%; border:none">
                     <div></div> 
@@ -35,7 +35,7 @@
         </div>
         <div class="footer subtle" style="margin-top: 0;">
             <span>This is gonna take a while to load...</span>
-            <span>2025-01-19</span>
+            <span>2025-01-24</span>
           </div>
 
         <script type="text/javascript" src="https://unpkg.com/vis-network/standalone/umd/vis-network.min.js"></script>
