--- a/rail-routing.html
+++ b/rail-routing.html
@@ -25,6 +25,7 @@
                     <select class="fakenode"id="end-display">Select end...</select>
                     <button style="margin-left: 25px;" onclick="calcBestRoute()">Calculate</button>
                     <button style="margin-left: 25px;" onclick="reset()">Clear</button>
+                    <button style="margin-left: 25px;" onclick="longest()" id="longest-path">Longest Possible Trip</button>
                     <div id="path-display" style="max-width: 75vw;"></div>
                 </div>
               </div>
@@ -35,7 +36,7 @@
         </div>
         <div class="footer subtle" style="margin-top: 0;">
             <span>This is gonna take a while to load...</span>
-            <span>2025-01-24</span>
+            <span>2025-05-29</span>
           </div>
 
         <script type="text/javascript" src="https://unpkg.com/vis-network/standalone/umd/vis-network.min.js"></script>
