--- a/rail-routing.html
+++ b/rail-routing.html
@@ -11,6 +11,7 @@
             <p style="font-weight: normal; text-decoration: none;">
                 An automatic routing guide for the railway network in <b>"First World"</b>, my singleplayer Minecraft world.
             </p>
+            <a href="./diagrams/railway_map_2025_06_08.png"><button>True-Scale Map</button></a>
         </div>
         <div class="content row" style="width: 100%; height: 90vh; display: flex;">
             <div class="column" style="flex-basis: 75%;">
