--- a/factory.html
+++ b/factory.html
@@ -1,37 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="stylesheet" type="text/css" href="https://the404.nl/css/controls.css">
-    <link rel="stylesheet" type="text/css" href="https://the404.nl/css/main.css">
-    <link rel="stylesheet" type="text/css" href="https://the404.nl/css/home.css">
-    <link rel="stylesheet" type="text/css" href="https://the404.nl/css/nav.css"> -->
-    <!-- <link rel="stylesheet" type="text/css" href="./css/style.css"> -->
-    <link rel="stylesheet" type="text/css" href="./css/factory.css">
-    <link rel="shortcut icon" type="image/x-icon" href="img/clock.png">
-    <title>Factory Plan</title>
-  </head>
-  <body onload="generateGraphFromJSON()">
-    <div id="root">
-      <h1>The Factory</h1>
-      <div style="display: flex;">
-        <div class="column" style="flex-basis: 75%;">
-          <div class="container" id="network" style="width: 100%; height: 98%; border:none"></div>
-        </div>
-        <div class="column" style="flex-basis: 25%;">
-          <div class="container" id="card-container"></div>
-        </div>
-      </div>
-      <div class="footer subtle">
-        <span>Minecraft Autocrafing Factory</span>
-        <span>First World - 11th Anniversary</span>
-        <span>2024-12-04</span>
-      </div>
-    </div>
-    <script type="text/javascript" src="https://unpkg.com/vis-network/standalone/umd/vis-network.min.js"></script>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <script src="./js/factory.js"></script>
+		<link rel="stylesheet" type="text/css" href="./css/new.css">
+		<link rel="shortcut icon" type="image/x-icon" href="img/clock.png">
+		<script src="https://kit.fontawesome.com/a79a931136.js" crossorigin="anonymous"></script>
 
-  </body>
+		<title>Factory Plan</title>
+	</head>
+	<body onload="generateGraphFromJSON()">
+		<div class="header">
+			<span class="menu-button" onclick="document.querySelector('.sidenav').classList.toggle('shown')" title="Show Menu" id="help-menu-open">
+				<i class="fas fa-bars" aria-hidden="true"></i>
+			</span>
+			<div class="logo">
+				<div class="logo-big">The Factory</div>
+				<div class="logo-small">Autocrafting Dependency Graph</div>
+			</div>
+		</div>
+
+		<div class="content-wrapper">
+			<div class="content" style="padding: 0; margin: 0 10px;">
+				<div class="column wide">
+					<div class="vis-container" id="network" style="height:95vh"></div>
+				</div>
+				<div class="column slim">
+					<div class="container" id="card-container"></div>
+				</div>
+			</div>
+		</div>
+
+		<div class="sidenav">
+            <a onclick="document.querySelector('.sidenav').classList.toggle('shown')"><i class="fas fa-times" aria-hidden="true"></i>Close</a>
+            <hr>
+            <a href="./index.html"><i class="fas fa-home" aria-hidden="true"></i>Home</a>
+            <a href="./rail-routing.html"><i class="fas fa-train-subway" aria-hidden="true"></i>Railways</a>
+            <a href="./farms.html"><i class="fas fa-tractor" aria-hidden="true"></i>Farms</a>
+            <a href="./factory.html" class="active"><i class="fas fa-gears" aria-hidden="true"></i>Factory</a>
+            <a href="./stat-recap.html"><i class="fas fa-chart-simple" aria-hidden="true"></i>Statistics</a>
+            <hr>
+            <a href="https://the404.nl"><i class="fas fa-computer" aria-hidden="true"></i>The404 Home</a>
+            <a href="https://github.com/the404devs/mc-things" target="_blank"><i class="fab fa-github" aria-hidden="true"></i>Source Code</a>
+        </div>
+
+		<div class="footer">
+			<span class="foot-text">Minecraft Autocrafing Factory</span>
+			<span class="foot-text">First World - 11th Anniversary</span>
+			<span class="foot-text">2024-12-04</span>
+		</div>
+		</div>
+		<script type="text/javascript" src="https://unpkg.com/vis-network/standalone/umd/vis-network.min.js"></script>
+
+		<script src="./js/factory.js"></script>
+
+	</body>
 </html>
