--- a/book-maker.html
+++ b/book-maker.html
@@ -1,6 +1,7 @@
+<!DOCTYPE html>
 <html>
     <head>
-        <title>Minecraft Recap</title>
+        <title>Book Maker</title>
         <link rel="stylesheet" type="text/css" href="./css/new.css">
         <link rel="shortcut icon" type="image/x-icon" href="img/clock.png">
         <script src="https://kit.fontawesome.com/a79a931136.js" crossorigin="anonymous"></script>
@@ -11,24 +12,28 @@
                 <i class="fas fa-bars" aria-hidden="true"></i>
             </span>
             <div class="logo">
-                <div class="logo-big">Minecraft Recap</div>
-                <div class="logo-small">Year-by-Year Statistics Comparison</div>
+                <div class="logo-big">Book Maker</div>
+                <div class="logo-small">maybe</div>
             </div>
+
         </div>
 
         <div class="content-wrapper">
-            <div class="year-selector">
-                <button class="minibutton" onclick="loadStats(2019)" id="2019">2019</button>
-                <button class="minibutton" onclick="loadStats(2020)" id="2020">2020</button>
-                <button class="minibutton" onclick="loadStats(2021)" id="2021">2021</button>
-                <button class="minibutton" onclick="loadStats(2022)" id="2022">2022</button>
-                <button class="minibutton" onclick="loadStats(2023)" id="2023">2023</button>
-                <button class="minibutton" onclick="loadStats(2024)" id="2024">2024</button>
-                <button class="minibutton" onclick="loadStats(2025)" id="2025">2025</button>
-            </div>
-            <div class="content">
-                <div class="column stats" id="primary"></div>
-                <div class="column stats" id="secondary"></div>
+            <div class="content" style="padding: 0; margin: 0 10px;">
+                <div class="column slim" id="page-container">
+                    <div class="card page">
+                        <h3>Page 1</h3>
+                        <div class="link-container">
+                            <div class="typable" contenteditable="true"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="column slim">
+                    <button class="button" onclick="generateCommand()">Generate</button>
+                    <div class="container" id="command-container">
+                        <textarea id="command-output" style="width: -webkit-fill-available;"></textarea>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -39,22 +44,22 @@
             <a href="./rail-routing.html"><i class="fas fa-train-subway" aria-hidden="true"></i>Railways</a>
             <a href="./farms.html"><i class="fas fa-tractor" aria-hidden="true"></i>Farms</a>
             <a href="./factory.html"><i class="fas fa-gears" aria-hidden="true"></i>Factory</a>
-            <a href="./stat-recap.html"  class="active"><i class="fas fa-chart-simple" aria-hidden="true"></i>Statistics</a>
+            <a href="./stat-recap.html"><i class="fas fa-chart-simple" aria-hidden="true"></i>Statistics</a>
+            <a href="./book-maker.html" class="active"><i class="fas fa-chart-simple" aria-hidden="true"></i>Book Generator</a>
             <hr>
             <a href="https://the404.nl"><i class="fas fa-computer" aria-hidden="true"></i>The404 Home</a>
             <a href="https://github.com/the404devs/mc-things" target="_blank"><i class="fab fa-github" aria-hidden="true"></i>Source Code</a>
         </div>
 
+
+            
+
+            
         <div class="footer subtle">
-            <span class="foot-text">Revision 3 - 2025-12-04</span>
+            <span class="foot-text">Revision 1 - 2025-09-09</span>
         </div>
 
-
-        <div class="modal">
-            <div class="modal-header"></div>
-            <div class="modal-body"></div>
-            <div class="modal-footer"></div>
-        </div>
-        <script src="./js/parser.js"></script>
+        <script type="text/javascript" src="https://unpkg.com/vis-network/standalone/umd/vis-network.min.js"></script>
+        <script src="./js/book-maker.js"></script>
     </body>
 </html>
